Added charts and power history retrieval.
